--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Game Title</title>
+</head>
 <body>
+    <header>
+        <h1>Welcome to Your Game's Website</h1>
+    </header>
 
-<h1>My First Heading</h1>
+    <section>
+        <p>
+            Here, you can provide information about your game and a link to download it on Google Play.
+        </p>
 
-<p>My first paragraph.</p>
+        <a href="Your-Google-Play-Link" target="_blank">Download on Google Play</a>
+    </section>
 
+    <footer>
+        <p>&copy; 2024 Your Game. All rights reserved.</p>
+    </footer>
 </body>
 </html>
