--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             Here, you can provide information about your game and a link to download it on Google Play.
         </p>
 
-        <a href="Your-Google-Play-Link" target="_blank">Download on Google Play</a>
+        <a href="google.com" target="_blank">Download on Google Play</a>
     </section>
 
     <footer>
