--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Your Game's Website</h1>
+        <h1>CBTS Games</h1>
     </header>
 
     <section>
