--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             Here, you can provide information about your game and a link to download it on Google Play.
         </p>
 
-        <a href="google.com">Download on Google Play</a>
+        <a href="https://google.com/">Download on Google Play</a>
     </section>
 
     <footer>
