--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section>
         <p>
             Here, you can provide information about your game and a link to download it on Google Play.
+            background-image: url('black.jpg'); 
         </p>
 
         <a href="https://google.com/">Download on Google Play</a>
