--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     </header>
 
     <section>
-        <p>
+        <h1>
             
-            Here, you can provide information about your game and a link to download it on Google Play.
+            Welcome on CBTS Games pages.
             
-        </p>
-
-        <a href="https://google.com/">Download on Google Play</a>
+        </h1>
     </section>
+    <section>
+        <h2>
+            SnowRoll.io
+        </h2>
+        <p>You can read end user license agreement on this <b><a href=/eula.html/>link</a></b></p>
+        <a href="https://google.com/">Download on Google Play</a>
+
 
     <footer>
         <p>&copy; 2024 Your Game. All rights reserved.</p>
