--- a/eula.html
+++ b/eula.html
@@ -42,4 +42,6 @@
 
 <h3>Governing Law</h3>
 
-<p>This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of <span class="country">sk</span>.</p>
+<p>This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of <span class="country">the Slovak republic</span>.</p>
+
+<p>Click <b><a href="cbtsgames.github.io/index.html/">here</a></b></p>
