--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
     <footer>
-        <p>&copy; 2024 Your Game. All rights reserved.</p>
+        <p>&copy; 2024 CBTS Games. All rights reserved.</p>
     </footer>
 </body>
 </html>
