--- a/eula.html
+++ b/eula.html
@@ -44,4 +44,4 @@
 
 <p>This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of <span class="country">the Slovak republic</span>.</p>
 
-<p>Click <b><a href=https://cbtsgames.github.io/>here</a></b> to go to the main page.</p>
+<p>Click <b><a href=https://cbtsgames.github.io/>here</a></b> to return to the main page.</p>
