--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>
             SnowRoll.io
         </h2>
-        <p>You can read EULA <b><a href=https://cbtsgames.github.io/eula.html>here</a></b></p>
+        <p>You can read EULA <b><a href=https://cbtsgames.github.io/eula.html>here</a></b> and Privacy Policy <b><a href=https://cbtsgames.github.io/privacy_policy.html>here</a></b></p>
         <a href="https://google.com/">Download on Google Play</a>
 
 
