--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -146,7 +146,6 @@
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
-<li>By email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="bddbc7dcc9d6d2fddad0dcd4d193ded2d0">[email&#160;protected]</a></li>
-</ul><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+<li>By email: <a href=fzatko@gmail.com>fzatko@gmail.com</a>
 <p></p>
 <p>Click <b><a href=https://cbtsgames.github.io/>here</a></b> to return to the main page.</p>
