--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -146,6 +146,6 @@
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
-<li>By email: <a href=fzatko@gmail.com>fzatko@gmail.com</a>
+<li>By email: <a href=mailito:fzatko@gmail.com>fzatko@gmail.com</a>
 <p></p>
 <p>Click <b><a href=https://cbtsgames.github.io/>here</a></b> to return to the main page.</p>
