--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
     <section>
         <h2>
-            SnowRoll.io
+            SnowPlane.io
         </h2>
         <p>You can read EULA <b><a href=https://cbtsgames.github.io/eula.html>here</a></b> and Privacy Policy <b><a href=https://cbtsgames.github.io/privacy_policy.html>here</a></b></p>
         <a href="https://google.com/">Download on Google Play</a>
