--- a/Tap_the_Shrimp/Index.html
+++ b/Tap_the_Shrimp/Index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Castle By The Sea</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico?">
+</head>
+<body>
+    Speech bubble: OpenMoji designed by HfG Schwäbisch Gmündň
+    Shrimp: Emojidex Emoji Library designed by Emojidex
 
+
+    <footer>
+        <p>&copy; 2024 CBTS Games. All rights reserved.</p>
+    </footer>
+</body>
+</html>
