--- a/Tap_the_Shrimp/Index.html
+++ b/Tap_the_Shrimp/Index.html
@@ -7,8 +7,10 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico?">
 </head>
 <body>
-    Speech bubble: OpenMoji designed by HfG Schwäbisch Gmündň
+    <h1>Emojis:</h1>
+    Speech bubble: OpenMoji designed by HfG Schwäbisch Gmünd
     Shrimp: Emojidex Emoji Library designed by Emojidex
+    Explostion (Boosted shrimp): OpenMoji designed by HfG Schwäbisch Gmünd
 
 
     <footer>
