--- a/Tap-the-Shrimp/index.html
+++ b/Tap-the-Shrimp/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Emojis:</h1>
-    Speech bubble: OpenMoji designed by HfG Schwäbisch Gmünd
-    Shrimp: Emojidex Emoji Library designed by Emojidex
+    Speech bubble: OpenMoji designed by HfG Schwäbisch Gmünd<br>
+    Shrimp: Emojidex Emoji Library designed by Emojidex<br>
     Explostion (Boosted shrimp): OpenMoji designed by HfG Schwäbisch Gmünd
 
 
