--- a/Tap-the-Shrimp/index.html
+++ b/Tap-the-Shrimp/index.html
@@ -10,7 +10,7 @@
     <h1>Emojis:</h1>
     Speech bubble: OpenMoji designed by HfG Schwäbisch Gmünd<br>
     Shrimp: Emojidex Emoji Library designed by Emojidex<br>
-    Explostion (Boosted shrimp): OpenMoji designed by HfG Schwäbisch Gmünd
+    Explosion (Boosted shrimp): OpenMoji designed by HfG Schwäbisch Gmünd
 
 
     <footer>
