--- a/Tap-the-Shrimp/index.html
+++ b/Tap-the-Shrimp/index.html
@@ -11,6 +11,7 @@
     Speech bubble: OpenMoji designed by HfG Schwäbisch Gmünd<br>
     Shrimp: Emojidex Emoji Library designed by Emojidex<br>
     Explosion (Boosted shrimp): OpenMoji designed by HfG Schwäbisch Gmünd
+    Heart: Noto Emoji designed by Google
 
 
     <footer>
